# jubeatIO

./: README.md  jubeatIO.ino
device/src/: CMakeLists.txt  device.cpp  device.h
jubeatIO/: jubeatIO.ino
